objects/vlocity_ins__AssignmentRule__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__AssignmentType__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Manual Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConditionData__c</fullName>
        <label>Condition Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DestinationQueueId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Destination Queue</label>
        <referenceTo>vlocity_ins__ManualQueue__c</referenceTo>
        <relationshipLabel>Manual Queue Assignment Rules(Destination)</relationshipLabel>
        <relationshipName>DestinationAssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DestinationUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Assignment Rules</relationshipLabel>
        <relationshipName>AssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Priority</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceQueueId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Queue</label>
        <referenceTo>vlocity_ins__ManualQueue__c</referenceTo>
        <relationshipLabel>Assignment Rules(Source)</relationshipLabel>
        <relationshipName>SourceAssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceTaskId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Manual Task</label>
        <referenceTo>vlocity_ins__OrchestrationItemDefinition__c</referenceTo>
        <relationshipLabel>Manual Queue Assignment Rules</relationshipLabel>
        <relationshipName>ManualQueueAssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Manual Queue Assignment Rule</label>
    <nameField>
        <label>Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manual Queue Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>